--- a/app/assets/stylesheets/demo_table.css
+++ b/app/assets/stylesheets/demo_table.css
@@ -158,7 +158,7 @@ table.display thead th {
 	font-weight: bold;
 	cursor: pointer;
 	* cursor: hand;
-	 background: url("images/ui-bg_highlight-soft_75_cccccc_1x100.png") repeat-x scroll 50% 50% #CCCCCC;
+	 background: url("/images/icons/ui-bg_highlight-soft_75_cccccc_1x100.png") repeat-x scroll 50% 50% #CCCCCC;
     border: 1px solid #AAAAAA;
     color: #222222;
 	font-size:12px
@@ -228,7 +228,7 @@ table.display tr.odd {
 }
 
 table.display tr.even {
-	background-color: #FFD700;
+	background-color: rgb(234, 234, 234) ;
 }
 
 
