--- a/app/views/follow_ups/_show_hover.html.erb
+++ b/app/views/follow_ups/_show_hover.html.erb
@@ -1,7 +1,8 @@
-<h4 class="htab">
+<h4>
 Follow Up
 </h4>
-
+<div class="htab" style="height:0">&nbsp;</div>
+<div class="previewBox">
 <ul class="vlsdet">
    <li><label>Title </label>: <%= @follow_up.title %></li>
    <li><label>Starts At </label>: <%= @follow_up.starts_at %></li>
@@ -15,4 +16,4 @@ Follow Up
    <li><label>Assigned By </label>: <%= @follow_up.aby %></li>
    <li><label>Description </label>: <%= @follow_up.desc %></li>
 </ul>
-
+</div>
