many changes with todos and calendar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -604,6 +604,8 @@ small.uncheckit{text-decoration:none;}
     padding: 0;
 }
 
+.todo_class{background:#FD9B00;border:1px solid #FD9B00; }
+
 /* SENTHIL's  CSS - End */
 
 /* Add New Go Create Starts */
