--- a/app/views/shared/_resources.html.erb
+++ b/app/views/shared/_resources.html.erb
@@ -79,7 +79,11 @@
         </div>
     </div>
 </div>
-
+<script type="text/javascript">
+$(function(){
+ activeMM("resourcesMM");
+});
+</script>
 
 
 
