--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -173,7 +173,7 @@ $(function(){
         <li id="dashboardMM">
         <img src="/images/icons/org_dashboard.png" id="iconMM1"width="36" /><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
-        <a href="dashboard.html">Dashboard</a></li>
+        <a href="dashboard.html" style="text-decoration:line-through">Dashboard</a></li>
         
         <li id="enquiriesMM">
         
@@ -195,11 +195,11 @@ $(function(){
         <li id="accountsMM">
         <img src="/images/icons/org_finance.png" id="iconMM4"width="36"/><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
-        <a href="#">Accounts</a></li>
+        <a href="#" style="text-decoration:line-through">Accounts</a></li>
         <li id="contractsMM">
         <img src="/images/icons/org_contracts.png" id="iconMM5"width="36"/><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
-        <a href="#">Contracts</a></li>
+        <a href="#" style="text-decoration:line-through">Contracts</a></li>
         <li id="emailMM">
         <%= link_to  email_templates_path do %>
           <img src="/images/icons/org_email.png"  id="iconMM6"width="36" /><br/>
@@ -218,7 +218,7 @@ $(function(){
         <li id="reportsMM">
         <img src="/images/icons/org_reports.png" id="iconMM8"width="36" /><br/>
         <img src="/images/icons/right-arrow.png" class="menuar" width="13"/>
-        <a href="#">Reports</a></li>
+        <a href="#" style="text-decoration:line-through">Reports</a></li>
         <li id="todosMM">
         
          <%= link_to todos_path do %>
