--- a/app/views/roles/_permissions.html.erb
+++ b/app/views/roles/_permissions.html.erb
@@ -5,7 +5,7 @@
      <table  class="tables3" border="0" cellpadding="0" cellspacing="0" width="100%">
      <% r = perms.keys %>
      <% defs = ["User","Enquiry","Registration"] %>
-     <% r.delete("All") %>
+     <% r = r - ["All","Country","City"] %>
      <% defs.each do |model| %>
     
           <tr colspan="5">
