--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <link rel="shortcut icon" type="image/x-icon" href="/images/icons/reportm.png">
  
 <script type="text/javascript">
 $(function(){
@@ -280,7 +281,7 @@ $(function(){
         <%= render "shared/todos" %>
         <br/>
         <ul class="vls">
-            <li><img src="images/icons/org_calenderb.png" width="14"/>
+            <li><img src="/images/icons/org_calenderb.png" width="14"/>
             <h6>
             <b>Calendar</b>
             </h6>
