--- a/app/views/roles/_permissions.html.erb
+++ b/app/views/roles/_permissions.html.erb
@@ -1,11 +1,19 @@
+<!-- permissions used twice - Users, Roles but different in create roles-->
 <br/>
 
 <%= form_for(role) do |f| %>
+    <div class="actions" id="perm_save_1" style="margin-bottom:10px;display:none;">
+     <%= f.submit "Save",{:class => "btnp fr"} %>
+    </div>
+    <br/>
+    <br/>
+    <br/>
     <% perms = (Permission.all.group_by &:subject_class) %>
      <table  class="tables3" border="0" cellpadding="0" cellspacing="0" width="100%">
      <% r = perms.keys %>
-     <% defs = ["User","Enquiry","Registration"] %>
+     <% defs = ["Enquiry","Registration"] %>
      <% r = r - ["All","Country","City"] %>
+
      <% defs.each do |model| %>
     
           <tr colspan="5">
@@ -14,6 +22,8 @@
           <%= model %>
           </h4>
           </td>
+          
+          
           <% perms[model].each do |p| %>
             <td>
                     <%= check_box_tag "#{f.object_name}[permission_ids][]",
@@ -27,47 +37,49 @@
     <% end %>
     <tr>
     <td colspan="6">
-    <span class="toggler" onclick="$('.more_permissions').slideToggle();"> more </span>
+    <span class="toggler" onclick="$('.more_permissions').slideToggle(); $('#perm_save_1').slideToggle();"> more </span>
     </td>
     </tr>
      </table>
      <table  class="tables3 more_permissions" border="0" cellpadding="0" cellspacing="0" width="100%"  style="display:none;">
                <tr>
                <td></td>
-               <% 4.times { %>
+               <% ["Create","Read","Update","Delete"].each do |i| %>
                <td><%= check_box_tag "permissions_col",
                                          nil,
                                          nil,
                                          {id: "col_check",
                                          checked: false,
-                                         onclick: "toggleAllCheckCol(this);"} %> column</td>
-               <% } %>
+                                         onclick: "toggleAllCheckCol(this);"} %>
+                <label> <%= i %> </label>
+               </td>
+               <% end %>
                </tr>
-               <% (r - defs).each do |model| %>
+               <% (r - (defs + ["User"])).each do |model| %>
                 
-                      <tr colspan="5" >
+                      <tr colspan="5"  align="center" >
                       <td>
                       <h4 class="htab">
                       <%= model %>
-                      <span class="fr padr30">
+                      <span class="fl padr10">
                       <%= check_box_tag "permissions_row",
                                          nil,
                                          nil,
                                          {id: "row_check",
                                          checked: false,
                                          onclick: "toggleAllCheckRow(this);"} %>
-                      row
+                      
                       </span>
                       &nbsp;
                       &nbsp;
                       </h4>
                       </td>
                       <% perms[model].each do |p| %>
-                        <td>
+                        <td align="center">
                                 <%= check_box_tag "#{f.object_name}[permission_ids][]",
                                                    p.id, 
                                                    role.permissions.include?(p),{class: "permissions"} %>
-                                <%= label_tag(:permissions, p.action.titleize)%>
+                                
                         </td>
                      <% end %>
                      </tr>
