--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -30,29 +30,66 @@ $(function(){
     <div  class="htab">
     <h4>
         Manage Permissions
-    </h4></div>
+        
+    </h4>
+        
+    </div>
+    <div class="actions" style="margin-top:10px;">
+             <%= role.submit "Save",{:class => "btnp fr"} %>
+    </div>
+    <br/>
+    <br/>
     <br/>
 
     <% perms = @permissions %>
     <table  class="tables3" border="0" cellpadding="0" cellspacing="0" width="100%">
          
-		 <% r = perms.keys %>
+         <% r = perms.keys %>
          <% r.delete("All") %>
-         <% r.each do |model| %>
-        
+         
+         <tr>
+         <td></td>
+               <% ["Create","Read","Update","Delete"].each do |i| %>
+               <td><%= check_box_tag "permissions_col",
+                                         nil,
+                                         nil,
+                                         {id: "col_check",
+                                         checked: false,
+                                         onclick: "toggleAllCheckCol(this);"} %>
+                <label> <%= i %> </label>
+               </td>
+               <% end %>
+         </tr>
+         
+         <% (r - ["User"]).each do |model| %>
+          
               <tr colspan="5">
               <td>
               <h4 class="htab">
-              <%= model %>
+               <%= model %>
+              <span class="fl padr10">
+                      <%= check_box_tag "permissions_row",
+                                         nil,
+                                         nil,
+                                         {id: "row_check",
+                                         checked: false,
+                                         onclick: "toggleAllCheckRow(this);"} %>
+                      
+                      </span>
+                      &nbsp;
+                      &nbsp;
               </h4>
               </td>
+              
               <% perms[model].each do |p| %>
-                <td>
+
+                   <td>
                         <%= check_box_tag "#{role.object_name}[permission_ids][]",
                                                                           p.id, 
                                                                           @role.permissions.include?(p) %>
-                        <%= label_tag(:permissions, p.action.titleize)%>
-                </td>
+                        
+                   </td>
+
              <% end %>
              </tr>
        
