--- a/app/views/users/_menus.html.erb
+++ b/app/views/users/_menus.html.erb
@@ -1,10 +1,9 @@
 <ul class="tab-menus1">
-<% if can? :read,User, id: current_user.id %>
+<% if current_user.adm? %>
 <li class="all_users"> 
 <%= link_to "All Users", users_path,{size: 12} %>
 </li>
-<% end %>
-<% if can? :create,User, id: current_user.id %>
+
 <li class = "invite_users">
 <%= link_to "Invite Users", new_user_invitation_path %>
 </li>
