--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -632,9 +632,9 @@ border-bottom:1px solid #fff;margin:0 15px -2px 0;}
 .newtab-content{background:#fff;padding:10px;display:none;border-top:1px solid #D9D9D9}
 /* REGISTRATION LAUNCH TABS - ENDS */
 
-/* TOOLTIP - STARTS */
-#tooltip {line-height:1em;display:none;position:absolute;z-index:100000000000;font-size:12px;box-shadow:2px 2px 5px #888888 ;max-width:230px;height:auto;
+#tooltip {line-height:1em;display:none;position:absolute;z-index:100000000000;font-size:12px;box-shadow:0 0 5px #888888 ;max-width:230px;height:auto;
 border:1px solid #3D3D3D;background:#3D3D3D;color:#FFFFFF;padding:5px;line-height:1.6em;filter:alpha(opacity=95);-moz-opacity: 0.95;opacity: 0.95;border-radius:2px;}
+#tooltip .tooltip-ar{position:absolute;left:-7px;top:1px;filter:alpha(opacity=95);-moz-opacity: 0.95;opacity: 0.95;}
 .tooltip{margin:0 5px 0 5px;cursor:pointer;}
 /* TOOLTIP - ENDS */
 
