--- a/app/views/enquiries/_listing.html.erb
+++ b/app/views/enquiries/_listing.html.erb
@@ -81,16 +81,16 @@
                                         title: "Use the dropdown to filter search. Use reset to clear the search box"} %>
        <span class="fr btnp" style="margin-left:10px"  onclick="$('.dataTables_filter input').val('').keyup();">
        Reset
-       </span>
+       </span>&nbsp;
       
-
+<!----------------------- Search filter---------------------------->
        <%= select_tag :abdc,
                       options_for_select(@cols.map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["Search",""])),
                       {id: "mySelect",style: "width:150px",class: "fr"} %>
                       
-
+<!----------------------- FollowUp filter ---------------------------->
        <%= select_tag :abdc,
-                      options_for_select([["FollowUp",""],["Today","todays"],["This Week","this_weeks"],["This Month","this_months"]]),
+                      options_for_select([["FollowUp",""],["Today","todays"],["This Week","this_weeks"],["This Month","this_months"],["No FollowUp","no_followups"]]),
                       {id: "followUpSelect",style: "width:150px",class: "fr"} %>
                       
                       
@@ -109,7 +109,7 @@
 
 $(function(){
 
-dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>");
+dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>",'<%= @cols.size + 1 %>');
 setColorsFromSession();
 activeMM("enquiriesMM");
 mytooltip();
