--- a/app/views/registrations/_listing.html.erb
+++ b/app/views/registrations/_listing.html.erb
@@ -1,3 +1,4 @@
+<!-- Registration datatable -->
 <% _id =  @status + "_registrations" %>
 <br/>
 <%= form_tag(url_for: "/asdf") do %>
@@ -78,9 +79,16 @@
                                         title: "Use the dropdown to filter search. Use reset to clear the search box"} %>
 
  <span class="fr btnp" style="margin-left:10px" onclick="$('.dataTables_filter input').val('').keyup();">Reset</span>&nbsp;
+<!----------------------- Search filter ---------------------------->
        <%= select_tag :abdc,
                       options_for_select(@cols.map{|i| i.is_a?(Array) ? [i[0].to_s.titleize,i[0]]  : [i.to_s.titleize,i] }.unshift(["Choose",""])),
                       {id: "mySelect",style: "width:150px",class: "fr"} %>
+                      
+                             
+<!----------------------- FollowUp filter ---------------------------->
+       <%= select_tag :abdc,
+                      options_for_select([["FollowUp",""],["Today","todays"],["This Week","this_weeks"],["This Month","this_months"],["No FollowUp","no_followups"]]),
+                      {id: "followUpSelect",style: "width:150px",class: "fr"} %>
                    <br/><br/>
    
        
@@ -103,7 +111,7 @@ float:left;
 
 <script>
 $(function(){
-dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>");
+dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>","<%= @cols.size + 1 %>");
 setColorsFromSession();
 mytooltip();
 });
