Data table width set
Data table width set

--- a/app/views/enquiries/_listing.html.erb
+++ b/app/views/enquiries/_listing.html.erb
@@ -113,7 +113,7 @@ dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>",'<%= @cols.size + 1 
 setColorsFromSession();
 activeMM("enquiriesMM");
 mytooltip();
-
+setDataTableWidth();
 });
 </script>
             
