--- a/app/views/registrations/_listing.html.erb
+++ b/app/views/registrations/_listing.html.erb
@@ -114,5 +114,6 @@ $(function(){
 dataTableStart("<%= _id %>","<%= @status %>","<%= @cols %>","<%= @cols.size + 1 %>");
 setColorsFromSession();
 mytooltip();
+setDataTableWidth();
 });
 </script>
