--- a/app/views/follow_ups/index.html.erb
+++ b/app/views/follow_ups/index.html.erb
@@ -8,10 +8,19 @@
               <h2>Your Calendar
               </h2>
            </li>
-          <br/>
-          <br/>
-         </ul>
 
+         </ul>
+<br/>
+<div>
+<small>Gut info her</small>
+</div>
+<br/>
+<div class="fr">
+<ul class="theme-colrs-lg">
+<li><span class="blue-theme-todo"></span>&nbsp;Todos</li>
+<li><span class="blue-theme-followup"></span>&nbsp;Follow Up</li></ul></div>
+<div class="cl"></div>
+<br/>
  
             <div id='calendar'> 
             </div>
